# WeReadIt

./: .gitignore  AGENTS.md  README.md  changelog.md  config.py  exchange.py  main.py  push.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: config-check.yml  deploy.yml
.workbuddy/memory/: 2026-07-19.md  2026-07-20.md
docs/superpowers/plans/: 2026-07-22-exchange-token-refresh.md  2026-07-22-secrets-simplification.md  2026-07-23-warmup-read.md
docs/superpowers/specs/: 2026-07-19-auto-exchange-award-design.md  2026-07-22-exchange-token-refresh-design.md  2026-07-22-secrets-simplification-design.md  2026-07-23-warmup-read-design.md
src/wereadit/: __init__.py  __main__.py  app.py  config.py  config_check.py  constants.py  exceptions.py  models.py
src/wereadit/core/: __init__.py  exchanger.py  reader.py  token_refresher.py
src/wereadit/infra/: __init__.py  curl_parser.py  http.py
src/wereadit/push/: __init__.py  bark.py  base.py  formatter.py  pushplus.py  registry.py  serverchan.py  telegram.py  wxpusher.py
src/wereadit/schemas/: __init__.py  books.json
src/wereadit/utils/: __init__.py  crypto.py  logging.py
tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_config_check.py  test_crypto.py  test_curl_parser.py  test_exchanger.py  test_formatter.py  test_keepalive.py  test_push_registry.py  test_read_result_warmup.py  test_reader_logs.py  test_token_refresher.py
